[gd_scene load_steps=2 format=3 uid="uid://bv74egn7vw5tu"]

[ext_resource type="Script" uid="uid://dxwd5x54vnn4a" path="res://scenes/menus_battle/player_character_panel.gd" id="1_iudu3"]

[node name="PlayerCharacterPanel" type="PanelContainer"]
offset_right = 237.0
offset_bottom = 58.0
script = ExtResource("1_iudu3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LabelName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Alice"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainerHP" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainerHP"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainerHP/HBoxContainer"]
modulate = Color(0, 1, 0, 1)
layout_mode = 2
text = "HP"

[node name="LabelHPCurrent" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainerHP/HBoxContainer"]
layout_mode = 2
text = "9999"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainerHP/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="LabelHPMax" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainerHP/HBoxContainer"]
layout_mode = 2
text = "9999"

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainerHP"]
modulate = Color(0, 1, 0, 1)
layout_mode = 2
show_percentage = false

[node name="VBoxContainerMP" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainerMP"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainerMP/HBoxContainer"]
modulate = Color(0, 0, 1, 1)
layout_mode = 2
text = "MP"

[node name="LabelMPCurrent" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainerMP/HBoxContainer"]
layout_mode = 2
text = "9999"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainerMP/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="LabelMPMax" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainerMP/HBoxContainer"]
layout_mode = 2
text = "9999"

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainerMP"]
modulate = Color(0, 0, 1, 1)
layout_mode = 2
show_percentage = false
